external-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: postgres
spec:
 type: ClusterIP
 ports:
 - port: 5432
   targetPort: 5432
