frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dc-frontend
  name: dc-frontend
spec:
  selector:
    app: dc-frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  type: NodePort
